use gen zgc for java 21 (#39)
* add gen zgc for java 21 to default

* update

* upgrade gradle and address comments

* nit

* docs

* update